baseline-source completely breaks tables
Categories
(Core :: Layout: Tables, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr102 | --- | unaffected |
firefox-esr115 | --- | verified |
firefox115 | --- | wontfix |
firefox116 | --- | verified |
firefox117 | --- | verified |
People
(Reporter: samuel, Assigned: dshin)
References
(Regression)
Details
(Keywords: regression)
Attachments
(2 files)
357 bytes,
text/html
|
Details | |
48 bytes,
text/x-phabricator-request
|
diannaS
:
approval-mozilla-beta+
RyanVM
:
approval-mozilla-esr115+
|
Details | Review |
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:109.0) Gecko/20100101 Firefox/115.0
Steps to reproduce:
After upgrading to Firefox 115 (can not reproduce on Firefox 112) our tables are broken. We have set "baseline-source" on some elements which seem to trigger this. We have seen the issue with "baseline-source: first" on <a> elements inside <table>.
Steps to reproduce:
- Open the attached test.html in Firefox
Actual results:
The table cell gets a height of ~18 million pixels (according to the inspector).
Expected results:
The table cell should only have a height of about 22 pixels.
Note that I have reproduced this in Firefox 115 on Fedora 38, macOS 13 and Android 13.
The issue can not be reproduced on table cells only containing text.
The issue can not be reproduced in Google Chrome, Microsoft Edge, Safari or Epiphany.
Comment 2•1 year ago
|
||
The Bugbug bot thinks this bug should belong to the 'Core::Widget: Gtk' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.
From what I can gather from caniuse.com and MDN, it seems Firefox doesn't actually support the CSS property "baseline-source" yet. It is confusing to me why it breaks things like this.
Component: Untriaged → Widget: Gtk
I don't think this is the correct component since I can reproduce on multiple platforms, not just Linux.
Updated•1 year ago
|
Comment 5•1 year ago
|
||
(In reply to Samuel from comment #3)
From what I can gather from caniuse.com and MDN, it seems Firefox doesn't actually support the CSS property "baseline-source" yet. It is confusing to me why it breaks things like this.
We do support it (bug 1809568). It seems MDN / BCD wasn't updated properly. I tagged that bug.
Updated•1 year ago
|
Assignee | ||
Updated•1 year ago
|
Assignee | ||
Comment 6•1 year ago
|
||
Updated•1 year ago
|
Comment 9•1 year ago
|
||
bugherder |
Comment 11•1 year ago
|
||
The patch landed in nightly and beta is affected.
:dshin, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox116
towontfix
.
For more information, please visit BugBot documentation.
Assignee | ||
Comment 12•1 year ago
|
||
Comment on attachment 9343596 [details]
Bug 1843086: Line participants use block start ascent, instead of not-yet stored baseline. r=#layout-reviewers
Beta/Release Uplift Approval Request
- User impact if declined: Content runs of as per comment 0.
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce: Test case in comment 0.
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): It's a small, focused change.
- String changes made/needed:
- Is Android affected?: Yes
Comment 13•1 year ago
|
||
Comment on attachment 9343596 [details]
Bug 1843086: Line participants use block start ascent, instead of not-yet stored baseline. r=#layout-reviewers
Approved for 116.0b6
Comment 14•1 year ago
|
||
uplift |
Updated•1 year ago
|
Updated•1 year ago
|
Updated•1 year ago
|
Comment 15•1 year ago
|
||
Comment on attachment 9343596 [details]
Bug 1843086: Line participants use block start ascent, instead of not-yet stored baseline. r=#layout-reviewers
Approved for 115.1esr.
Comment 16•1 year ago
|
||
uplift |
Updated•1 year ago
|
Updated•1 year ago
|
Comment 17•1 year ago
|
||
Reproduced the bug using an affected Nightly build (2023-07-14) with STR from comment 0.
The issue is verified as fixed on the latest builds, 115.1 ESR, 116.0 RC1 and 117.0a1 Nightly. Tested across platforms, Win 11 x64, macOS 11 and Ubuntu 20.04 x64.
Description
•