Bug 1843086: Line participants use block start ascent, instead of not-yet stored baseline. r=emilio, a=dsmith

Differential Revision: https://phabricator.services.mozilla.com/D183432